--- a/SeniorResourceServiceCenter/MainPage.xaml
+++ b/SeniorResourceServiceCenter/MainPage.xaml
@@ -30,27 +30,16 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="backButton"
-                    Click="GoBack"
-                    IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}"
-                    Style="{StaticResource BackButtonStyle}" />
-            
             <TextBlock x:Name="pageTitle"
                        Grid.Column="1"
-                       Text="my mvvm app"
-                       Style="{StaticResource PageHeaderTextStyle}" />
+                       Text="Senior Resource Service Center"
+                       Style="{StaticResource PageHeaderTextStyle}" Margin="94,0,30,40" />
         </Grid>
-
-        <TextBlock x:Name="WelcomeTextBlock"
-                   FontSize="56"
-                   Text="{Binding WelcomeTitle}"
-                   Grid.Row="1"
-                   VerticalAlignment="Top"
-                   HorizontalAlignment="Left"
-                   FontFamily="Segoe UI Light"
-                   Margin="120,49,0,0"
-                   TextAlignment="Center"
-                   FontWeight="Light" />
+        <TextBox x:Name="txtUserName" HorizontalAlignment="Left" Margin="590,343,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="216"/>
+        <TextBlock x:Name="txtblkUserName" HorizontalAlignment="Left" Margin="382,346,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" FontSize="24"/>
+        <Button x:Name="btnLogIn" Content="Log In" HorizontalAlignment="Left" Margin="590,518,0,0" Grid.Row="1" VerticalAlignment="Top" Height="56" Width="168" FontSize="24"/>
+        <TextBox x:Name="txtPassword" HorizontalAlignment="Left" Margin="590,432,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="216"/>
+        <TextBlock x:Name="txtblkPassword" HorizontalAlignment="Left" Margin="382,435,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" FontSize="24"/>
 
         <VisualStateManager.VisualStateGroups>
             <!-- Visual states reflect the application's view state -->
@@ -59,73 +48,15 @@
                 <VisualState x:Name="Filled" />
 
                 <!-- The entire page respects the narrower 100-pixel margin convention for portrait -->
-                <VisualState x:Name="FullScreenPortrait">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton"
-                                                       Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0"
-                                                    Value="{StaticResource PortraitBackButtonStyle}" />
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.HorizontalAlignment)"
-                                                       Storyboard.TargetName="WelcomeTextBlock">
-                            <DiscreteObjectKeyFrame KeyTime="0">
-                                <DiscreteObjectKeyFrame.Value>
-                                    <HorizontalAlignment>Center</HorizontalAlignment>
-                                </DiscreteObjectKeyFrame.Value>
-                            </DiscreteObjectKeyFrame>
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)"
-                                                       Storyboard.TargetName="WelcomeTextBlock">
-                            <DiscreteObjectKeyFrame KeyTime="0">
-                                <DiscreteObjectKeyFrame.Value>
-                                    <Thickness>20,49,20,0</Thickness>
-                                </DiscreteObjectKeyFrame.Value>
-                            </DiscreteObjectKeyFrame>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
+                <VisualState x:Name="FullScreenPortrait"/>
 
                 <!-- The back button and title have different styles when snapped -->
                 <VisualState x:Name="Snapped">
                     <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton"
-                                                       Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0"
-                                                    Value="{StaticResource SnappedBackButtonStyle}" />
-                        </ObjectAnimationUsingKeyFrames>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle"
                                                        Storyboard.TargetProperty="Style">
                             <DiscreteObjectKeyFrame KeyTime="0"
                                                     Value="{StaticResource SnappedPageHeaderTextStyle}" />
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.TextWrapping)"
-                                                       Storyboard.TargetName="WelcomeTextBlock">
-                            <DiscreteObjectKeyFrame KeyTime="0">
-                                <DiscreteObjectKeyFrame.Value>
-                                    <TextWrapping>Wrap</TextWrapping>
-                                </DiscreteObjectKeyFrame.Value>
-                            </DiscreteObjectKeyFrame>
-                        </ObjectAnimationUsingKeyFrames>
-                        <DoubleAnimation Duration="0"
-                                         To="32"
-                                         Storyboard.TargetProperty="(TextBlock.FontSize)"
-                                         Storyboard.TargetName="WelcomeTextBlock"
-                                         d:IsOptimized="True" />
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)"
-                                                       Storyboard.TargetName="WelcomeTextBlock">
-                            <DiscreteObjectKeyFrame KeyTime="0">
-                                <DiscreteObjectKeyFrame.Value>
-                                    <Thickness>20,49,20,0</Thickness>
-                                </DiscreteObjectKeyFrame.Value>
-                            </DiscreteObjectKeyFrame>
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.HorizontalAlignment)"
-                                                       Storyboard.TargetName="WelcomeTextBlock">
-                            <DiscreteObjectKeyFrame KeyTime="0">
-                                <DiscreteObjectKeyFrame.Value>
-                                    <HorizontalAlignment>Center</HorizontalAlignment>
-                                </DiscreteObjectKeyFrame.Value>
-                            </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
